--- a/assets/css/style.dark.css
+++ b/assets/css/style.dark.css
@@ -58142,7 +58142,6 @@ em {
   gap: 25px;
   width: max-content;
   height: max-content;
-  margin-top: 10px;
 }
 
 .name-numbers h3 {
@@ -59445,6 +59444,13 @@ body::-webkit-scrollbar {
   text-transform: capitalize;
 }
 
+.btns-fixed-right .btn--fixed img {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  transform: rotateZ(-90deg);
+}
+
 .before-search {
   width: 100%;
   display: flex;
@@ -60367,7 +60373,6 @@ table p {
   align-items: center;
   gap: 15px;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .awards {
@@ -60375,6 +60380,7 @@ table p {
   align-items: center;
   gap: 12px;
   padding: 15px;
+  margin-left: auto;
 }
 
 .awards li:not(:last-child) {
@@ -60395,6 +60401,790 @@ table p {
 .echart {
   height: 280px;
   direction: ltr;
+}
+
+.SubscriptionModal {
+  z-index: 99999
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate {
+  padding: 15px;
+  box-shadow: 1px 1px 5px #eee;
+  border-radius: 15px;
+  background: #f9f9f9;
+  margin-bottom: 20px;
+  padding-bottom: 0;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .reatePox {
+  text-align: center;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .reatePox h2 {
+  font-size: 30px;
+  font-weight: 100;
+  font-family: inherit;
+  margin: 0;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .reatePox p {
+  margin: 0;
+  font-size: 12px;
+  color: #666;
+  font-weight: 200;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .reatePox .stars {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .reatePox .stars .rate-data {
+  font-family: inherit;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .SubscrTitle {
+  text-align: center;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .SubscrTitle h2 {
+  margin: 0;
+  font-size: 15px;
+  font-weight: 100;
+  text-transform: none;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .uperbox-rate .SubscrTitle h1 {
+  font-size: 30px;
+  margin: 10px 0;
+  font-weight: 500;
+  font-family: inherit;
+}
+
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate {
+  margin: 0px 0;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate .table-responsive {
+  display: block;
+  max-height: 250px;
+  width: 100%;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate .table-responsive::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table {
+  background: #fff !important;
+  background-color: #fff !important;
+  margin-top: 15px;
+  border-spacing: 0 0px !important;
+  padding: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  border: 1px solid #eee;
+  margin-top: 0;
+  text-align: center;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table thead {
+  background: #854395;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table thead tr th {
+  color: #fff;
+  font-size: 15px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: #854395;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table tbody tr {
+  box-shadow: none;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table tbody tr:nth-child(even) {
+  background: #f1f1f1;
+  background-color: #f1f1f1 !important;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table tbody tr td {
+  padding: 5px;
+  border-radius: 0;
+}
+
+.SubscriptionModal .SuscriptionBody .right-side .TableRate table tbody tr td p {
+  font-size: 14px;
+}
+
+.FixedLeft_Btns {
+  left: 0;
+  overflow: auto;
+  padding-bottom: 5px;
+  position: fixed;
+  transform: rotate(-90deg);
+  transform-origin: left top;
+  z-index: 2;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+  bottom: -20px;
+  width: calc(100vh - 95px);
+}
+
+.FixedLeft_Btns .customBTN {
+  background: #702283;
+  color: #fff;
+  padding: 3px 15px;
+  font-size: 15px;
+  border-radius: 0 0 4px 4px;
+  border: 0;
+  text-transform: capitalize;
+  min-width: max-content;
+}
+
+.SubscriptionModal .mostlyBox {
+  padding: 15px;
+  background: #f9f9f9;
+  border-radius: 15px;
+  box-shadow: 0 0 5px #eee;
+  position: relative;
+}
+
+.SubscriptionModal .mostlyBox .titileMostly h1 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.SubscriptionModal .mostlyBox .titileMostly h2 {
+  margin: 0;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.SubscriptionModal .mostlyBox .titileMostly h2 img {
+  display: inline-block;
+  height: 40px;
+}
+
+.SubscriptionModal .chartcircle {
+  margin-top: 15px;
+  padding-top: 15px;
+  border-top: 1px solid #dfdfdf;
+  display: block;
+}
+
+.SubscriptionModal .chartcircle .chartcontent {
+  width: max-content;
+  margin: auto;
+}
+
+.SubscriptionModal .CircleChart {
+  background: #f9f9f9;
+  border-radius: 15px;
+  padding: 15px;
+  box-shadow: 0 0 5px #eee;
+  height: 100%;
+}
+
+.SubscriptionModal .CircleChart h2 {
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.SubscriptionModal .chartcircle .chartcontent .usage-chart {
+  width: 85px;
+}
+
+.SubscriptionModal .chartcircle .chartcontent .usage-chart svg {
+  height: 100%;
+  width: 100%;
+}
+
+.SubscriptionModal .chartcircle .chartcontent .circle-progress-circle {
+  stroke: #d2d6e5;
+}
+
+.SubscriptionModal .chartcircle .chartcontent .circle-progress-value {
+  stroke-width: 6px;
+  stroke: #fc9b00;
+}
+
+.SubscriptionModal .chartcircle .chartcontent .circle-progress-text {
+  font-size: 15px;
+  font-weight: 600;
+  color: #000;
+  opacity: 1;
+  fill: #000;
+}
+
+.superAgentRight {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  z-index: 9;
+  background: #1d0c2e;
+  width: 40%;
+  right: 0;
+  transition: .3s;
+  transform: translate(100%);
+  overflow: hidden;
+  z-index: 9999;
+  padding: 15px;
+  height: 100%;
+  overflow: auto;
+}
+
+.superAgentRight {
+  background: #fff;
+}
+
+.overlay-menu-right {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  z-index: 8;
+  width: 100%;
+  height: 100%;
+  background: #000000cc;
+  transition: .3s;
+  display: none;
+  z-index: 9;
+}
+
+.overlay-menu-right.active {
+  display: block;
+}
+
+.overlay-menu-right .close-menu {
+  position: absolute;
+  left: auto;
+  right: 41%;
+  color: #fff !important;
+  font-size: 30px !important;
+  top: 13px;
+  cursor: pointer;
+}
+
+.SubscriptionModal .apex-charts {
+  min-height: 50px !important;
+}
+
+.SuscriptionBody .accordion {
+  margin-top: 15px;
+}
+
+.SuscriptionBody .accordion .accordion-header .accordion-button {
+  background: #b640b2;
+  color: #fff;
+  padding: 0 15px;
+  height: 40px;
+  border-radius: 5px !important;
+}
+
+.SuscriptionBody .accordion-button::after {
+  filter: brightness(100);
+}
+
+
+.SuscriptionBody .accordion-button:not(.collapsed) {
+  border-radius: 5px 5px 0 0 !important;
+}
+
+.OpenCVXPOPUP {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #f00;
+  border: none;
+  background: #fff0;
+}
+
+.OpenCVXPOPUP i {
+  color: #000;
+  font-size: 20px;
+}
+
+.SubscriptionModal .consumed p {
+  margin-top: 0;
+  width: 120%;
+  left: -10%;
+  bottom: 25px;
+}
+
+.SubscriptionModal .consumed p span {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  font-size: 25px;
+  color: #333
+}
+
+.SubscriptionModal .consumed p em {
+  display: inline-block;
+  color: #121212;
+  font-size: 45px;
+}
+
+.SubscriptionModal .consumed {
+  width: 250px;
+  min-width: 230px;
+  min-height: 170px;
+}
+
+.SubscriptionModal .management {
+  background: #f9f9f9;
+}
+
+.SubscriptionModal .modal-body {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.rate-customer button {
+  border: 0;
+  padding: 0;
+  background: unset;
+}
+
+.rate-customer .dropdown-menu {
+  padding: 20px;
+  margin-top: 8px !important;
+  min-width: max-content;
+  background: #1d0c2e;
+  border: 1px solid #4d2f6a;
+}
+
+.rate-customer .btn-confirm-rate {
+  margin: 0 auto;
+  display: block;
+  margin-top: 25px;
+  padding: 5px 15px;
+  border-radius: 3px;
+  background: #702283;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 14px;
+}
+
+.rate-customer h5 {
+  margin-bottom: 17px;
+  font-size: 17px;
+  font-weight: normal;
+}
+
+.star-rating {
+  overflow: hidden;
+  position: relative;
+  height: 28px;
+  font-size: 17px;
+  width: 100px;
+  font-family: bootstrap-icons !important;
+}
+
+.star-rating:before {
+  content: "\f588\f588\f588\f588\f588";
+  color: #97818859;
+  top: 0;
+  left: 0;
+  position: absolute;
+  font-weight: bold;
+  display: flex;
+  letter-spacing: 4px;
+}
+
+.star-rating span {
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  position: absolute;
+  height: 100%;
+}
+
+.star-rating span:before {
+  content: "\f586\f586\f586\f586\f586";
+  top: 0;
+  position: absolute;
+  left: 0;
+  color: #FFC107;
+  letter-spacing: 4px;
+}
+
+.feedback {
+  --normal: #ECEAF3;
+  --normal-shadow: #D9D8E3;
+  --normal-mouth: #9795A4;
+  --normal-eye: #595861;
+  --active: #F8DA69;
+  --active-shadow: #F4B555;
+  --active-mouth: #F05136;
+  --active-eye: #313036;
+  --active-tear: #76b5e7;
+  --active-shadow-angry: #e94f1d;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.feedback li {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-size: 15px;
+  color: #BCBCCB;
+}
+
+.feedback li div {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  border-radius: 50%;
+  background: var(--sb, var(--normal));
+  box-shadow: inset 3px -3px 4px var(--sh, var(--normal-shadow));
+  transition: background 0.4s, box-shadow 0.4s, transform 0.3s;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.feedback li div svg,
+.feedback li div:before,
+.feedback li div:after {
+  display: block;
+  position: absolute;
+  left: var(--l, 9px);
+  top: var(--t, 13px);
+  width: var(--w, 8px);
+  height: var(--h, 2px);
+  transform: rotate(var(--r, 0deg)) scale(var(--sc, 1)) translateZ(0);
+}
+
+.feedback li div svg {
+  fill: none;
+  stroke: var(--s);
+  stroke-width: 2px;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  transition: stroke 0.4s;
+}
+
+.feedback li div svg.eye {
+  --s: var(--e, var(--normal-eye));
+  --t: 17px;
+  --w: 7px;
+  --h: 4px;
+}
+
+.feedback li div svg.eye.right {
+  --l: 23px;
+}
+
+.feedback li div svg.mouth {
+  --s: var(--m, var(--normal-mouth));
+  --l: 11px;
+  --t: 23px;
+  --w: 18px;
+  --h: 7px;
+}
+
+.feedback li div:before,
+.feedback li div:after {
+  content: "";
+  z-index: var(--zi, 1);
+  border-radius: var(--br, 1px);
+  background: var(--b, var(--e, var(--normal-eye)));
+  transition: background 0.4s;
+}
+
+.feedback li.angry div {
+  --step-1-rx: -24deg;
+  --step-1-ry: 20deg;
+  --step-2-rx: -24deg;
+  --step-2-ry: -20deg;
+}
+
+.feedback li.angry div:before {
+  --r: 20deg;
+}
+
+.feedback li.angry div:after {
+  --l: 23px;
+  --r: -20deg;
+}
+
+.feedback li.angry div svg.eye {
+  stroke-dasharray: 4.55;
+  stroke-dashoffset: 8.15;
+}
+
+.feedback li.angry.active div {
+  -webkit-animation: angry 1s linear;
+  animation: angry 1s linear;
+}
+
+.feedback li.angry.active div:before {
+  --middle-y: -2px;
+  --middle-r: 22deg;
+  -webkit-animation: toggle 0.8s linear forwards;
+  animation: toggle 0.8s linear forwards;
+}
+
+.feedback li.angry.active div:after {
+  --middle-y: 1px;
+  --middle-r: -18deg;
+  -webkit-animation: toggle 0.8s linear forwards;
+  animation: toggle 0.8s linear forwards;
+}
+
+.feedback li.sad {
+  --step-1-rx: 20deg;
+  --step-1-ry: -12deg;
+  --step-2-rx: -18deg;
+  --step-2-ry: 14deg;
+}
+
+.feedback li.sad div:before,
+.feedback li.sad div:after {
+  --b: var(--active-tear);
+  --sc: 0;
+  --w: 5px;
+  --h: 5px;
+  --t: 15px;
+  --br: 50%;
+}
+
+.feedback li.sad div:after {
+  --l: 25px;
+}
+
+.feedback li.sad div svg.eye {
+  --t: 16px;
+}
+
+.feedback li.sad div svg.mouth {
+  --t: 24px;
+  stroke-dasharray: 9.5;
+  stroke-dashoffset: 33.25;
+}
+
+.feedback li.sad.active div:before,
+.feedback li.sad.active div:after {
+  -webkit-animation: tear 0.6s linear forwards;
+  animation: tear 0.6s linear forwards;
+}
+
+.feedback li.ok {
+  --step-1-rx: 4deg;
+  --step-1-ry: -22deg;
+  --step-1-rz: 6deg;
+  --step-2-rx: 4deg;
+  --step-2-ry: 22deg;
+  --step-2-rz: -6deg;
+}
+
+.feedback li.ok div:before {
+  --l: 12px;
+  --t: 17px;
+  --h: 4px;
+  --w: 4px;
+  --br: 50%;
+  box-shadow: 12px 0 0 var(--e, var(--normal-eye));
+}
+
+.feedback li.ok div:after {
+  --l: 13px;
+  --t: 26px;
+  --w: 14px;
+  --h: 2px;
+  --br: 1px;
+  --b: var(--m, var(--normal-mouth));
+}
+
+.feedback li.ok.active div:before {
+  --middle-s-y: .35;
+  -webkit-animation: toggle 0.2s linear forwards;
+  animation: toggle 0.2s linear forwards;
+}
+
+.feedback li.ok.active div:after {
+  --middle-s-x: .5;
+  -webkit-animation: toggle 0.7s linear forwards;
+  animation: toggle 0.7s linear forwards;
+}
+
+.feedback li.good {
+  --step-1-rx: -14deg;
+  --step-1-rz: 10deg;
+  --step-2-rx: 10deg;
+  --step-2-rz: -8deg;
+}
+
+.feedback li.good div:before {
+  --b: var(--m, var(--normal-mouth));
+  --w: 5px;
+  --h: 5px;
+  --br: 50%;
+  --t: 22px;
+  --zi: 0;
+  opacity: 0.5;
+  box-shadow: 16px 0 0 var(--b);
+  filter: blur(2px);
+}
+
+.feedback li.good div:after {
+  --sc: 0;
+}
+
+.feedback li.good div svg.eye {
+  --t: 15px;
+  --sc: -1;
+  stroke-dasharray: 4.55;
+  stroke-dashoffset: 8.15;
+}
+
+.feedback li.good div svg.mouth {
+  --t: 22px;
+  --sc: -1;
+  stroke-dasharray: 13.3;
+  stroke-dashoffset: 23.75;
+}
+
+.feedback li.good.active div svg.mouth {
+  --middle-y: 1px;
+  --middle-s: -1;
+  -webkit-animation: toggle 0.8s linear forwards;
+  animation: toggle 0.8s linear forwards;
+}
+
+.feedback li.happy div {
+  --step-1-rx: 18deg;
+  --step-1-ry: 24deg;
+  --step-2-rx: 18deg;
+  --step-2-ry: -24deg;
+}
+
+.feedback li.happy div:before {
+  --sc: 0;
+}
+
+.feedback li.happy div:after {
+  --b: var(--m, var(--normal-mouth));
+  --l: 11px;
+  --t: 23px;
+  --w: 18px;
+  --h: 8px;
+  --br: 0 0 8px 8px;
+}
+
+.feedback li.happy div svg.eye {
+  --t: 14px;
+  --sc: -1;
+}
+
+.feedback li.happy.active div:after {
+  --middle-s-x: .95;
+  --middle-s-y: .75;
+  -webkit-animation: toggle 0.8s linear forwards;
+  animation: toggle 0.8s linear forwards;
+}
+
+.feedback li:not(.active) {
+  cursor: pointer;
+}
+
+.feedback li.active,
+.feedback li:hover {
+  --sb: var(--active);
+  --sh: var(--active-shadow);
+  --m: var(--active-mouth);
+  --e: var(--active-eye);
+}
+
+@-webkit-keyframes tear {
+  0% {
+    opacity: 0;
+    transform: translateY(-2px) scale(0) translateZ(0);
+  }
+
+  50% {
+    transform: translateY(12px) scale(0.6, 1.2) translateZ(0);
+  }
+
+  20%,
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(24px) translateX(4px) rotateZ(-30deg) scale(0.7, 1.1) translateZ(0);
+  }
+}
+
+@keyframes tear {
+  0% {
+    opacity: 0;
+    transform: translateY(-2px) scale(0) translateZ(0);
+  }
+
+  50% {
+    transform: translateY(12px) scale(0.6, 1.2) translateZ(0);
+  }
+
+  20%,
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(24px) translateX(4px) rotateZ(-30deg) scale(0.7, 1.1) translateZ(0);
+  }
+}
+
+@-webkit-keyframes toggle {
+  50% {
+    transform: translateY(var(--middle-y, 0)) scale(var(--middle-s-x, var(--middle-s, 1)), var(--middle-s-y, var(--middle-s, 1))) rotate(var(--middle-r, 0deg));
+  }
+}
+
+@keyframes toggle {
+  50% {
+    transform: translateY(var(--middle-y, 0)) scale(var(--middle-s-x, var(--middle-s, 1)), var(--middle-s-y, var(--middle-s, 1))) rotate(var(--middle-r, 0deg));
+  }
+}
+
+@-webkit-keyframes angry {
+  40% {
+    background: var(--active);
+  }
+
+  45% {
+    box-shadow: inset 3px -3px 4px var(--active-shadow), inset 0 8px 10px var(--active-shadow-angry);
+  }
+}
+
+@keyframes angry {
+  40% {
+    background: var(--active);
+  }
+
+  45% {
+    box-shadow: inset 3px -3px 4px var(--active-shadow), inset 0 8px 10px var(--active-shadow-angry);
+  }
 }
 
 /* responsive */
