--- a/assets/css/style.light.css
+++ b/assets/css/style.light.css
@@ -123890,6 +123890,15 @@ div.dataTables_wrapper div.dataTables_length select:focus {
   display: none;
 }
 
+.total-answer {
+  margin: 0;
+  font-size: 18px;
+  font-weight: normal;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 /* responsive */
 
 @media (max-width:1300px) {
