--- a/assets/css/style.dark.css
+++ b/assets/css/style.dark.css
@@ -61133,6 +61133,84 @@ table p {
   stroke: #1b0c2c;
 }
 
+/* ramadan confetti */
+.ramadan-img {
+  position: fixed;
+  z-index: 99999;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.ramadan-img.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+}
+
+.ramadan-img img {
+  position: absolute;
+  top: 0;
+}
+
+.ramadan-img .img-1 {
+  width: 165px;
+  right: 60px;
+  transform: rotateY(180deg);
+}
+
+.ramadan-img .img-2 {
+  height: 500px;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+}
+
+.ramadan-img .img-3 {
+  width: 165px;
+  left: 60px;
+}
+
+body #confetti {
+  position: fixed;
+  z-index: 9999;
+  inset: 0;
+  backdrop-filter: blur(6px);
+}
+
+.bg-ramadan {
+  height: 65px;
+  width: 100%;
+  background-repeat: repeat;
+  background-size: contain;
+  margin-bottom: 15px;
+  background-position: right;
+  animation: mymove 120s linear infinite;
+  -webkit-animation: mymove 120s linear infinite;
+}
+
+@keyframes mymove {
+  50% {
+    background-position: left;
+  }
+}
+
 /* responsive */
 @media (max-width:1300px) {
   .bottom-part {
